# deepicedrain

./: .gitignore  .gitmodules  .remote-sync.json  ATL06_to_ATL11.py  ATL06_to_ATL11_Antarctica.sh  ATL11_to_download.txt  Dockerfile  Pipfile  README.md  Untitled.ipynb  antarctic_subglacial_lakes.geojson  antarctic_subglacial_lakes_3031.geojson  antarctic_subglacial_lakes_4326.geojson  atl06_play.ipynb  atl06_play.py  atl06_to_atl11.ipynb  atl06_to_atl11.py  atl11_play.ipynb  atl11_play.py  atl11_play_old.ipynb  atl11_play_old.py  atlas_catalog.yaml  atlxi_dhdt.ipynb  atlxi_dhdt.py  atlxi_dhdt_cupy.py  atlxi_lake.ipynb  atlxi_lake.py  atlxi_xover.ipynb  atlxi_xover.py  catalog.yaml  environment.yml  nsidc-download-ATL11.py  pyproject.toml
.dvc/: config
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: docker-build.yml  push.yml  python-app.yml
ATLXI/: df_dhdt_amundsen_sea_embayment.parquet.dvc  df_dhdt_slessor_downstream.parquet.dvc  df_dhdt_whillans_downstream.parquet.dvc  df_dhdt_whillans_upstream.parquet.dvc
X2SYS/ICESAT2/: ICESAT2.tag  ICESAT2_paths.txt  ICESAT2_tracks.d  xyht.fmt
deepicedrain/: README.md  __init__.py  atlas_catalog.yaml  deepicedrain_regions.geojson  deltamath.py  extraload.py  geo.py  lake_algorithms.py  nsidc_opendap.py  spatiotemporal.py  vizplots.py
deepicedrain/features/: subglacial_lakes.feature
deepicedrain/tests/: conftest.py  test_array_to_dataframe.py  test_calculate_delta.py  test_catalog.yaml  test_deepicedrain.py  test_dhdt_maxslp.py  test_nanlinregress.py  test_nanptp.py  test_ndarray_to_dataframe.py  test_nsidc_opendap.py  test_region.py  test_spatiotemporal_conversions.py  test_spatiotemporal_cube.py  test_spatiotemporal_gpu.py  test_subglacial_lake_animation.py  test_subglacial_lake_crossover.py  test_subglacial_lake_finder.py  test_vizplots.py  test_wide_to_long.py
tests/: test_bbox.py  test_calculate_delta.py
