[tool.poetry]
name = "deepicedrain"
version = "0.4.1"
description = "Mapping and monitoring deep subglacial water activity in Antarctica using remote sensing and machine learning."
authors = ["Wei Ji Leong <weiji.leong@vuw.ac.nz>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
alphashape = "^1.1.0"
atl11 = {git = "https://github.com/suzanne64/ATL11.git", rev = "cf667454a292da35c0e756f48afc7530240a5f3a"}
cupy-cuda102 = {version = "^10.0.0a2", optional = true}
cython = "^0.29.23"
dask = "^2021.5.1"
dask-cuda = {version = "^21.6.0", optional = true}
dask-labextension = "^5.0.2"
datashader = "^0.12.1"
distributed = "^2021.5.1"
dvc = "^2.0.6"
geopandas = "^0.9.0"
graphviz = "^0.16"
h5netcdf = "^0.11.0"
hvplot = "^0.7.1"
icepyx = {extras = ["viz"], version = "^0.4.0"}
intake = {extras = ["dataframe", "server"], version = "^0.6.1"}
intake-geopandas = "^0.2.4"
intake-parquet = "^0.2.3"
intake-xarray = "^0.4.1"
jupyterlab = "^3.0.11"
matplotlib = "^3.3.3"
numcodecs = "^0.7.3"
Pint = "^0.17"
Pint-Pandas = {git = "https://github.com/hgrecco/pint-pandas.git", rev = "4d6b9cfc82abe8a932615119da71406a025f2487"}
pointcollection = {git = "https://github.com/SmithB/pointCollection.git", rev = "4d702582c790269acef010a518398a892cc58db9"}
pyarrow = "1.0.1"
pyepsg = "^0.4.0"
pygmt = "^0.3.1"
python = "~3.8"
python-snappy = "^0.6.0"
pyproj = "^3.0.1"
scikit-learn = "^0.24.1"
tqdm = "^4.54.0"
uncertainties = "^3.1.5"
xarray = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupytext = "^1.10.3"
pytest = "^6.2.2"
pytest-bdd = "^4.0.2"
pytest-xdist = "^2.2.1"

[tool.poetry.extras]
cuda = ["cupy-cuda102", "dask-cuda"]

[tool.poetry.plugins."intake.catalogs"]
"atlas_cat" = "deepicedrain:catalog"

[tool.pytest.ini_options]
bdd_features_base_dir = "deepicedrain/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
