[tool.poetry]
name = "deepicedrain"
version = "0.4.2"
description = "Mapping and monitoring deep subglacial water activity in Antarctica using remote sensing and machine learning."
authors = ["Wei Ji Leong <weiji.leong@vuw.ac.nz>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
alphashape = "^1.3.1"
atl11 = {git = "https://github.com/suzanne64/ATL11.git", rev = "3f570a558f876cf648062703a2fa3bf5924177c4"}
cupy-cuda11x = {version = "^11.2.0", optional = true}
cython = "^0.29.24"
dask = {extras = ["distributed"], version = "^2022.9.2"}
dask-cuda = {version = "^22.10.0", optional = true}
datashader = "^0.13.0"
dvc = "^2.5.4"
geopandas = "^0.9.0"
graphviz = "^0.17"
h5netcdf = "^0.11.0"
hvplot = "^0.7.3"
icepyx = "^0.4.0"
intake = {extras = ["dataframe", "server"], version = "^0.6.1"}
intake-geopandas = "^0.2.4"
intake-parquet = "^0.2.3"
intake-xarray = "^0.4.1"
jupyterlab = "^3.4.2"
matplotlib = "^3.4.2"
numcodecs = "^0.8.0"
Pint = "^0.17"
Pint-Pandas = {git = "https://github.com/hgrecco/pint-pandas.git", rev = "4d6b9cfc82abe8a932615119da71406a025f2487"}
pointcollection = {git = "https://github.com/SmithB/pointCollection.git", rev = "64c8193dec9a339357d6e66c349c747abfaea885"}
pyarrow = "5.0.0"
pyepsg = "^0.4.0"
pygmt = "^0.4.0"
python = "~3.8"
python-snappy = "^0.6.0"
pyproj = "^3.1.0"
scikit-learn = "^0.24.2"
tqdm = "^4.61.1"
uncertainties = "^3.1.6"
xarray = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
dask-labextension = "^5.3.0"
jupytext = "^1.11.4"
pytest = "^6.2.4"
pytest-bdd = "^4.1.0"
pytest-xdist = "^2.3.0"

[tool.poetry.extras]
cuda = ["cupy-cuda11x", "dask-cuda"]

[tool.poetry.plugins."intake.catalogs"]
"atlas_cat" = "deepicedrain:catalog"

[tool.pytest.ini_options]
bdd_features_base_dir = "deepicedrain/"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
